Add InputParser, rework CLI input