@@ -1,67 +1,108 @@
 package feedme.app;
 
-import feedme.domain.tidbit.Tidbit;
 import feedme.domain.tidbit.TidbitRepository;
-import feedme.domain.tidbit.action.TidbitAction;
+import feedme.domain.tidbit.TidbitState;
+import feedme.domain.tidbit.seed.Seed;
+import feedme.domain.tidbit.seed.SeedRepository;
+import feedme.domain.tidbit.seed.impl.TaskSeed;
 
+import java.time.Duration;
+import java.time.Instant;
+import java.util.List;
 import java.util.Scanner;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 
 public class CliService {
-    private final TidbitRepository store = new TidbitRepository();
+    private final TidbitRepository tidbits = new TidbitRepository();
+    private final SeedRepository seeds = new SeedRepository();
 
     public void start() {
         Scanner in = new Scanner(System.in);
         in.useDelimiter("\\n");
         boolean shouldRun = true;
         while(shouldRun) {
-            out("\nMorsels:");
-            store.forEach((id, tidbit) -> out(String.format("%d: %s", id, tidbit)));
-            String line = in.next();
-            Matcher matcher = Pattern.compile("(?<command>\\w*)\\W+(?<remaining>.*)").matcher(line);
-            matcher.matches();
-            String command = matcher.group("command");
-            String remaining = matcher.group("remaining");
-            switch (command) {
-//                case "add" -> add(remaining);
-//                case "consume" -> consume(remaining);
-                case "exit" -> {out("bye"); shouldRun = false;}
+            out("\nSeeds:");
+            seeds.forEach((id, seed) -> {
+                seed.createTidbits(Instant.now());
+                out("%d: %s".formatted(id, seed));
+            });
+            out("\nTidbits:");
+            tidbits.forEach((id, tidbit) -> {
+                if (tidbit.currentState.equals(TidbitState.Visible)) {
+                    out(String.format("%d: %s", id, tidbit));
+                }
+            });
+            try {
+                String input = in.next();
+                if (input.isBlank()) {
+                    continue;
+                }
+                List<String> splitInput;
+                try {
+                    splitInput = new InputParser(2).parse(input);
+                } catch (InputParser.InputParserException e) {
+                    throw new InputException("start", e);
+                }
+                String command = splitInput.get(0);
+                switch (command) {
+                    case "add" -> add(splitInput.get(1));
+                    case "exit" -> {out("bye"); shouldRun = false;}
+                    default -> throw new InputException("start", "unhandled command '%s'".formatted(command));
+                }
+            } catch (InputException e) {
+                out(e.getMessage());
             }
         }
         in.close();
     }
-/*
-    private void add(String remaining) {
-        int newId = store.addTidbit(remaining.strip());
-        out(String.format("Added %d", newId));
-    }
 
-    private void consume(String remaining) {
-        Matcher matcher = Pattern.compile("(?:\\W|^)\\d+(?:\\W|$)").matcher(remaining);
-
-        while (matcher.find()) {
-            int id = Integer.parseInt(matcher.group().strip());
-            if (store.getTidbit(id).isEmpty()){
-                out("Couldn't find morsel with id %d", id);
-                continue;
-            }
-            Tidbit tidbit = store.getTidbit(id).get();
-            TidbitAction newAction = TidbitAction.Impl.Consume.create();
-            if (!newAction.isApplicableTo(tidbit)) {
-                out("Action couldn't be applied to morsel %d", id);
-                continue;
-            }
-            if (!store.putTidbit(id, newAction.apply(tidbit))) {
-                out("Failed to replace morsel %d", id);
-                continue;
-            }
-            out("Consumed %d", id);
+    private void add(String remaining) throws InputException {
+        List<String> splitInput;
+        try {
+            splitInput = new InputParser(2).parse(remaining);
+        } catch (InputParser.InputParserException e) {
+            throw new InputException("add", e);
+        }
+        String type = splitInput.get(0);
+        switch (type) {
+            case "task" -> addTaskSeed(splitInput.get(1));
+            default -> throw new InputException("add", "unhandled type '%s'".formatted(type));
         }
     }
-    */
+
+    private void addTaskSeed(String remaining) throws InputException {
+        List<String> splitInput;
+        try {
+            splitInput = new InputParser(2, true, true).parse(remaining);
+        } catch (InputParser.InputParserException e) {
+            throw new InputException("add task", e);
+        }
+        String instruction = splitInput.get(0);
+        String expiresAtInput = splitInput.get(1);
+        Instant expiresAt = Instant.now();
+        if (expiresAtInput.startsWith("P")) {
+            Instant.now().plus(Duration.parse(expiresAtInput));
+        } else {
+            expiresAt = Instant.parse(expiresAtInput);
+        }
+        Seed newSeed = new TaskSeed(
+            instruction,
+            expiresAt,
+            tidbits
+        );
+        seeds.addSeed(newSeed);
+    }
 
     private void out(String format, Object... objects) {
         System.out.printf((format) + "%n", objects);
+    }
+
+    private static class InputException extends Exception {
+        private InputException(String inputStep, Throwable cause) {
+            super("Error in input after '%s': '%s'".formatted(inputStep, cause.getMessage()));
+        }
+
+        private InputException(String inputStep, String message) {
+            super("Error in input after '%s': '%s'".formatted(inputStep, message));
+        }
     }
 }
